fixing build in newer android studio...

--- a/project.properties
+++ b/project.properties
@@ -12,3 +12,6 @@
 
 # Project target.
 target=android-23
+
+properties
+org.gradle.jvmargs=--add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
