rewrite aapService for starting a service on app start and keep it. So we can bring other services up. Such a WifiLauncher listener

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,10 +90,7 @@
 
         <service
             android:name=".aap.AapService"
-            android:foregroundServiceType="connectedDevice|mediaPlayback" /> <!-- Added foregroundServiceType -->
-        <service
-            android:name=".connection.WifiProxyService"
-            android:foregroundServiceType="connectedDevice" />
+            android:foregroundServiceType="connectedDevice|mediaPlayback" />
         <service android:name=".location.GpsLocationService" />
 
         <receiver android:name=".app.RemoteControlReceiver"
